# agents

./: .gitignore  ADD NEW SWE AGENT.md  ADD_NEW_SWE_AGENT.md  CODEBASE_DOCUMENTATION.md  MCP_INTEGRATION_TECHNICAL_DOCUMENTATION.md  Makefile  README.md  WHITELABELING_GUIDE.md  chat-sambanova-agent-api-spec.yaml  docker-compose.yml  test_agent_apis.sh  test_openai_api_old.sh
backend/: .env.example  Dockerfile  Dockerfile-orchestrator  Dockerfile-orchestrator-minimal  github_auth_validation.json  log.txt  pyproject.toml  requirements.txt  test_file_api.py  test_file_storage.py  test_gpt_oss.py  test_voice_api.py
backend/agent/: crewai_llm.py  lead_generation_crew.py
backend/agent/financial_analysis/: financial_analysis_crew.py
backend/api/: auth.py  data_types.py  lead_generation_api.py  registry.py  utils.py  websocket_manager.py
backend/api/agents/: assistant.py  deep_research_agent.py  educational_content.py  financial_analysis.py  route.py  sales_leads.py  sambanova_knowledge_agent.py  user_proxy.py
backend/api/agents/open_deep_research/: graph.py  prompts.py  utils.py
backend/api/agents/sambanova_knowledge/: llamastack_sambanova_knowledge.py  tools.py
backend/api/services/: .gitattributes  redis_service.py
backend/config/: model_config.json
backend/docs/: CONNECTOR_LESSONS_LEARNED.md  MCP_CONNECTOR_ARCHITECTURE.md  admin_panel_implementation.md
backend/services/: company_research_service.py  document_processing_service.py  financial_user_prompt_extractor_service.py  query_router_service.py
backend/src/agents/agent/: crewai_llm.py  lead_generation_crew.py
backend/src/agents/api/: data_types.py  files.py  llm_overrides.py  main.py  middleware.py  openai_models.py  otlp_tracing.py  registry.py  session_state.py  stream.py  subgraph_factory.py  utils.py  websocket_interface.py  websocket_manager.py
backend/src/agents/auth/: __init__.py  auth0_config.py
backend/src/agents/components/: crewai_llm.py  crewai_message_interceptor.py  lead_generation_crew.py
backend/src/agents/config/: llm_config.yaml  llm_config_manager.py
backend/src/agents/mcp/: __init__.py  server_manager.py
backend/src/agents/rag/: ingest.py  parsing.py  upload.py
backend/src/agents/registry/: model_config.json  model_registry.py
backend/src/agents/services/: company_research_service.py  export_service.py  market_research_service.py  (+5 more)
backend/src/api/: files.py
backend/src/orchestrator/: __init__.py  main.py  standalone_main.py
backend/src/utils/: file_storage.py
backend/tests/: test_openai_api.sh  test_openai_compatibility.py
backend/tools/: competitor_analysis_tool.py  financial_data.py  fundamental_analysis_tool.py  risk_assessment_tool.py  technical_analysis_tool.py
backend/utils/: error_utils.py  logging.py
(+343 files in other folders)
